--- a/src/styles/profileImage.css
+++ b/src/styles/profileImage.css
@@ -1,3 +1,3 @@
-figure {
+figure.profileImage {
     margin-block: calc(var(--space-3xl) + var(--space-3xs)) var(--space-3xl);
 }
